nexus-mobile/lib/ffi/nexus_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Dart bindings for Nexus Storage core engine (Rust).
class NexusCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NexusCoreBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NexusCoreBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Free a byte buffer previously allocated by the nexus-core library.
  void nexus_free_bytes(ffi.Pointer<ffi.Uint8> ptr, int len) {
    return _nexus_free_bytes(ptr, len);
  }

  late final _nexus_free_bytesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>
      >('nexus_free_bytes');
  late final _nexus_free_bytes = _nexus_free_bytesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Encrypt bytes with a password.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_encrypt(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_encrypt(in_ptr, in_len, password, out_ptr, out_len);
  }

  late final _nexus_encryptPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_encrypt');
  late final _nexus_encrypt = _nexus_encryptPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// Decrypt bytes with a password.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_decrypt(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_decrypt(in_ptr, in_len, password, out_ptr, out_len);
  }

  late final _nexus_decryptPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_decrypt');
  late final _nexus_decrypt = _nexus_decryptPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// Compress bytes.
  /// level: 0=auto, 1=lz4, 2=zstd, 3=lzma, 4=store
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_compress(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    int level,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_compress(in_ptr, in_len, level, out_ptr, out_len);
  }

  late final _nexus_compressPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_compress');
  late final _nexus_compress = _nexus_compressPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// Decompress bytes.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_decompress(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_decompress(in_ptr, in_len, out_ptr, out_len);
  }

  late final _nexus_decompressPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_decompress');
  late final _nexus_decompress = _nexus_decompressPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// Compute SHA-256 hex fingerprint.
  /// out_hex must be at least 65 bytes long.
  int nexus_sha256_hex(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Char> out_hex,
  ) {
    return _nexus_sha256_hex(in_ptr, in_len, out_hex);
  }

  late final _nexus_sha256_hexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('nexus_sha256_hex');
  late final _nexus_sha256_hex = _nexus_sha256_hexPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Char>)
      >();

  /// Encode bytes into PNG frames in output_dir.
  /// mode: 0=Tank, 1=Density
  /// Returns the number of frames written (positive) or a negative error code.
  int nexus_encode_to_frames(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Char> output_dir,
    int mode,
  ) {
    return _nexus_encode_to_frames(in_ptr, in_len, output_dir, mode);
  }

  late final _nexus_encode_to_framesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('nexus_encode_to_frames');
  late final _nexus_encode_to_frames = _nexus_encode_to_framesPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Char>, int)
      >();

  /// Decode a payload from PNG frames in frame_dir.
  /// mode: 0=Tank, 1=Density
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  /// Returns 0 on success or a negative error code.
  int nexus_decode_from_frames(
    ffi.Pointer<ffi.Char> frame_dir,
    int mode,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_decode_from_frames(frame_dir, mode, out_ptr, out_len);
  }

  late final _nexus_decode_from_framesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_decode_from_frames');
  late final _nexus_decode_from_frames = _nexus_decode_from_framesPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// Generate a cryptographically random 32-byte file key.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_generate_file_key(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_generate_file_key(out_ptr, out_len);
  }

  late final _nexus_generate_file_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_generate_file_key');
  late final _nexus_generate_file_key = _nexus_generate_file_keyPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Pointer<ffi.Uint8>>, ffi.Pointer<ffi.Size>)
      >();

  /// Encrypt bytes using a raw 32-byte file key (bypasses PBKDF2).
  /// key_ptr must point to exactly 32 bytes.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_encrypt_with_key(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Uint8> key_ptr,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_encrypt_with_key(in_ptr, in_len, key_ptr, out_ptr, out_len);
  }

  late final _nexus_encrypt_with_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_encrypt_with_key');
  late final _nexus_encrypt_with_key = _nexus_encrypt_with_keyPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// Decrypt a blob produced by nexus_encrypt_with_key.
  /// key_ptr must point to exactly 32 bytes.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_decrypt_with_key(
    ffi.Pointer<ffi.Uint8> in_ptr,
    int in_len,
    ffi.Pointer<ffi.Uint8> key_ptr,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_decrypt_with_key(in_ptr, in_len, key_ptr, out_ptr, out_len);
  }

  late final _nexus_decrypt_with_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_decrypt_with_key');
  late final _nexus_decrypt_with_key = _nexus_decrypt_with_keyPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
        )
      >();

  /// (V4 Security) Generate a cryptographically random 16-byte recovery salt for Argon2.
  /// out_ptr will point to a buffer that must be freed with nexus_free_bytes.
  int nexus_generate_recovery_salt(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_ptr,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _nexus_generate_recovery_salt(out_ptr, out_len);
  }

  late final _nexus_generate_recovery_saltPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('nexus_generate_recovery_salt');
  late final _nexus_generate_recovery_salt = _nexus_generate_recovery_saltPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Pointer<ffi.Uint8>>, ffi.Pointer<ffi.Size>)
      >();
